fix scrollbars showing.

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .canvas-container canvas {
-  width: min(calc(100vh - 310px), 100%);
+  width: min(calc(100vh - 330px), 100%);
   height: auto;
 
   border-style: solid;
